Nov 08 2000 -	read() and reqadline() now behave very much like the standard
		Python file object counterparts. Added James Gessling's VMS
		instructions.

Nov 07 2000 -   Initial version of req.readline(), also some fixes to 
		req.read() (both now raise appropriate errors). Both still need
		some work.

Nov 04 2000 -	Implemented _apache.parse_qs. Also, CGIStin had a read() bug.
		PythonHandlerModule is documented.

Oct 30 2000 -	Implemented PythonHandlerModule. Still need to document it.

Oct 29 2000 -	2.6.3 release. Mostly static install bug fixes.

Oct 22 2000 -   2.6.2 release

Oct 22 2000 -   "Fatal Python error: PyThreadState_Get: no current thread" upon
		exit is now fixed. Also, --with-python was improved to point
		to the right Makefile (Modules/Makefile) when scanning for LIBS.

Oct 21 2000 -   2.6.1 release

Oct 20 2000 -	Fixed some minor installation bugs.

Oct 19 2000 -   2.6 out

Oct 16 2000 -	Began a major file reorganization. All objects are now in
		separate files, and all external functions have an Mp prefix
		and named consistently with Python C API conventions.

Oct 15 2000 -	We now use mkdep.

Oct 12 2000 -   Autoconf now works. Documentation has been adjusted. Also
		added Windows installation instructions to the docs.

Oct  2 2000 -   PythonInterpPerServer is now default behavior, and this 
		directive is therefore obsolete. The old default behavior can
		be achieved via the new PythonInterpPerDirective directive.

Sep  ? 2000 -   Request is now a real python object. This means that it can be
		used to retain state between requests.

Sep  9 2000 -   Added server.register_cleanup(). This happened to be a little
		trickier than I thought since it turned out that server_rec does
		not have a pool member. Py_Finalze() has been moved to a 
		cleanup from the ChildExit handler because ChildExit runs *before*
		any cleanups. (Now I know why mod_perl doesn't use child_exit.)

Sep  8 2000 -   Sean True's fix to call note_basic_auth_failure added.
