@@ -51,7 +51,7 @@
  *
  * tableobject.c 
  *
- * $Id: tableobject.c,v 1.1 2000/10/16 20:58:57 gtrubetskoy Exp $
+ * $Id: tableobject.c,v 1.2 2000/11/18 04:21:32 gtrubetskoy Exp $
  *
  */
 
@@ -340,7 +340,7 @@ static PyObject * table_repr(tableobject *self)
 }
 
 PyTypeObject MpTable_Type = {
-    PyObject_HEAD_INIT(NULL)
+    PyObject_HEAD_INIT(&PyType_Type)
     0,
     "mp_table",
     sizeof(tableobject),
